# ai-code-assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README-quickstart.md  README.md  docker-compose.yml  mkdocs-new-files.txt  mkdocs-setup.patch  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
charts/llama-worker/: _helpers.tpl
charts/llama-worker/templates/: deployment.yaml
docs/: architecture.md  ci-secrets.md  github-pages-setup.md  index.md  router.md  security.md
k8s/: netpol-allow-dns.yaml  orchestrator-deployment.yaml  sandbox-executor.yaml
model-worker/: Dockerfile
orchestrator/: Dockerfile  __init__.py  app_breaker.py  router.py
orchestrator/app/: main.py
sandbox-executor/: Dockerfile
src/router/: weighted_router.py
tests/: test_auth.py  test_e2e.py  test_router.py  test_router_gpu_select.py
