[project]
name = "ai-code-assistant"
version = "0.1.1"
description = "FastAPI-based AI code assistant with GPU-aware routing"
authors = [{ name = "crothmeier", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]