[tool.poetry]
name = "ai-code-assistant"
version = "0.1.1"
description = "FastAPI-based AI code assistant with GPU-aware routing"
authors = ["crothmeier <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
